tests/specs/run/ts_type_imports/ts_type_imports.ts
// deno-lint-ignore-file

type Foo = import("./ts_type_imports_foo.ts").Foo;

const foo: Foo = new Map<string, string>();
